Fixed layout issues with media queries #32

--- a/src/scss/_classes.scss
+++ b/src/scss/_classes.scss
@@ -33,7 +33,6 @@
 
 .picture-container {
   grid-area: left;
-  aspect-ratio: 1/1;
 }
 
 .link-container {
