--- a/src/scss/_ids.scss
+++ b/src/scss/_ids.scss
@@ -8,7 +8,8 @@
 
 #directory-container {
   display: flex;
-  justify-content: space-evenly;
+  justify-content: center;
+  gap: 1rem;
   align-items: center;
 }
 
